--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/node-fetch": "^2.6.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^8.5.1",
     "loopback-connector-mongodb": "^5.6.0",
     "node-fetch": "^2.6.5",
     "password-generator": "^2.3.2",
